# wasmbuilder.app

./: .env  .gitignore  Cargo.toml  Makefile  README.md  diesel.toml
.github/: dependabot.yml
.github/workflows/: build.yml
crates/graph/: Cargo.toml
crates/graph/src/: lib.rs
crates/graph/wit/: world.wit
crates/site/: spin.toml
crates/site/statistics/: Cargo.toml
crates/site/statistics/migration/2023-11-26-140822_statistics/: down.sql  up.sql
crates/site/statistics/src/: lib.rs
spin/: spin.toml
src/: details.tsx  dialogs.tsx  library.tsx  nodes.tsx  schema.rs
