[package]
name = "graph"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.75"
once_cell = "1.18.0"
#wasm-compose = "0.4.14"
wasm-compose = { git = "https://github.com/avrabe/wasm-tools", branch = "im"}

#wasmparser = "0.118.0"
wasmparser = { git = "https://github.com/avrabe/wasm-tools", branch = "im"}
wat = "1.0.80"
wit-component = "0.18.2"
#cargo-component-bindings = { git = "https://github.com/bytecodealliance/cargo-component" }

#cargo-component-bindings = "0.4.1"
cargo-component-bindings = { git = "https://github.com/bytecodealliance/cargo-component.git"}
#wit-bindgen = "0.14.0"
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen.git"}

[package.metadata.component]

[package.metadata.component.target]
