[package]
name = "statistics"
authors = ["Ralf Anton Beier <ralf_beier@me.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
anyhow = "1"
http = "0.2"
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v2.0.0" }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0"


